--- a/water-waves-effect/index.html
+++ b/water-waves-effect/index.html
@@ -40,7 +40,8 @@
 	</div>
 </div>
 <p>
-	This effect has been used in Floor796 project. See swimming pool here: https://floor796.com/#t2r2,683,88
+	This effect has been used in Floor796 project.
+	See swimming pool here: <a href="https://floor796.com/#t2r2,683,88">https://floor796.com/#t2r2,683,88</a>
 </p>
 <script>
 	const FPS = 24;
